--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL=https://your-target-url.com">
+    <meta http-equiv="refresh" content="0"; URL="http://43.201.60.148:8889">
 </head>
 <body>
 </body>
