--- a/index.html
+++ b/index.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0"; URL="http://43.201.60.148:8889">
+    <title>tdat.github.io</title>
+    <style>
+        body, html {
+            margin: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
+    <iframe src="http://43.201.60.148:8889"></iframe>
 </body>
 </html>
