--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>tdat.github.io</title>
-    <style>
-        body, html {
-            margin: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://your-hidden-url.com">
+    <title>Redirecting...</title>
 </head>
 <body>
-    <iframe src="http://43.201.60.148:8889"></iframe>
+    If you are not redirected automatically, follow this <a href="https://your-hidden-url.com">link</a>.
 </body>
 </html>
