--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://your-hidden-url.com">
+    <meta http-equiv="refresh" content="0; url=http://43.201.60.148:8889/">
     <title>Redirecting...</title>
 </head>
 <body>
-    If you are not redirected automatically, follow this <a href="https://your-hidden-url.com">link</a>.
+    If you are not redirected automatically, follow this <a href="http://43.201.60.148:8889/">link</a>.
 </body>
 </html>
