--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,3 +11,22 @@
     If you are not redirected automatically, follow this <a href="http://43.201.60.148:8889/">link</a>.
 </body>
 </html>
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <script>
+        // JavaScript로 리다이렉트를 수행
+        window.onload = function() {
+            window.location.href = 'http://43.201.60.148:8889/';
+        };
+    </script>
+</head>
+<body>
+    If you are not redirected automatically, follow this <a href="http://43.201.60.148:8889/">link</a>.
+</body>
+</html>
+
