--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <script>
-        // JavaScript로 리다이렉트를 수행
-        window.onload = function() {
-            window.location.href = 'http://43.201.60.148:8889/';
-        };
-    </script>
+    <title>Loading Content</title>
+    <style>
+        body, html, iframe {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    If you are not redirected automatically, follow this <a href="http://43.201.60.148:8889/">link</a>.
+    <iframe src="http://43.201.60.148:8889/"></iframe>
 </body>
 </html>
 
