--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://github.com/tetrapod0">
+    <meta http-equiv="refresh" content="0; url=https://tetrapod0.github.io/Pages/portfolio/">
     <title>Redirecting...</title>
 </head>
 <body>
-    If you are not redirected automatically, follow this <a href="https://github.com/tetrapod0">link</a>.
+    If you are not redirected automatically, follow this <a href="https://tetrapod0.github.io/Pages/portfolio/">link</a>.
 </body>
 </html>
